syntax = "proto3";

import "ActivityScheduleInfo.proto";

message ActivityScheduleInfoNotify {
	enum CmdId {
		option allow_alias = true;
		ENET_CHANNEL_ID = 0;
		NONE = 0;
		ENET_IS_RELIABLE = 1;
		IS_ALLOW_CLIENT = 1;
		CMD_ID = 2068;
	}

	repeated ActivityScheduleInfo activity_schedule_list = 1;
	uint32 remain_fly_sea_lamp_num = 2;
}
