syntax = "proto3";


message DungeonFollowNotify {
	enum CmdId {
		option allow_alias = true;
		NONE = 0;
		ENET_CHANNEL_ID = 0;
		ENET_IS_RELIABLE = 1;
		CMD_ID = 947;
	}

	uint32 target_uid = 1;
}
