syntax = "proto3";

import "EntityConfigHashEntry.proto";

message EntityConfigHashNotify {
	enum CmdId {
		option allow_alias = true;
		ENET_CHANNEL_ID = 0;
		NONE = 0;
		ENET_IS_RELIABLE = 1;
		IS_ALLOW_CLIENT = 1;
		CMD_ID = 3487;
	}

	repeated EntityConfigHashEntry ability_entry_list = 1;
	repeated EntityConfigHashEntry combat_entry_list = 2;
	repeated EntityConfigHashEntry avatar_entry_list = 3;
}
