syntax = "proto3";


message GetActivityInfoReq {
	enum CmdId {
		option allow_alias = true;
		ENET_CHANNEL_ID = 0;
		NONE = 0;
		ENET_IS_RELIABLE = 1;
		IS_ALLOW_CLIENT = 1;
		CMD_ID = 2197;
	}

	repeated uint32 activity_id_list = 1;
}
