syntax = "proto3";

import "ObstacleInfo.proto";

message PathfindingEnterSceneReq {
	enum CmdId {
		option allow_alias = true;
		ENET_CHANNEL_ID = 0;
		NONE = 0;
		ENET_IS_RELIABLE = 1;
		IS_ALLOW_CLIENT = 1;
		CMD_ID = 2400;
	}

	uint32 scene_id = 1;
	uint32 version = 2;
	repeated ObstacleInfo obstacles = 3;
	bool is_editor = 4;
	repeated uint32 activity_id = 5;
}
