syntax = "proto3";

import "RegionSearchInfo.proto";

message RegionSearchNotify {
	enum CmdId {
		option allow_alias = true;
		NONE = 0;
		ENET_CHANNEL_ID = 0;
		ENET_IS_RELIABLE = 1;
		CMD_ID = 5603;
	}

	repeated RegionSearchInfo region_search_list = 1;
	uint32 uid = 2;
}
