syntax = "proto3";

import "SceneTeamAvatar.proto";

message SceneTeamUpdateNotify {
	enum CmdId {
		option allow_alias = true;
		NONE = 0;
		ENET_CHANNEL_ID = 0;
		ENET_IS_RELIABLE = 1;
		CMD_ID = 1793;
	}

	repeated SceneTeamAvatar scene_team_avatar_list = 1;
	bool is_in_mp = 3;
}
