syntax = "proto3";


message SetOpenStateReq {
	enum CmdId {
		option allow_alias = true;
		ENET_CHANNEL_ID = 0;
		NONE = 0;
		ENET_IS_RELIABLE = 1;
		IS_ALLOW_CLIENT = 1;
		CMD_ID = 106;
	}

	uint32 key = 1;
	uint32 value = 2;
}
